<resources>
    <string name="app_name">Morphsys Mobile POS</string>
    <string name="scan_barcode_button">Scan barcode</string>
    <string name="no_barcode_captured">No barcode captured</string>
    <string name="barcode_error_format">"Error reading barcode: %1$s"</string>

    <string name="bDate">Birth date</string>
    <string name="branch">Branch</string>

    <!-- Strings related to barcode scanner -->
    <string name="quantity">QUANTITY</string>
    <string name="productPrice">PRICE</string>
    <string name="productName">PRODUCT</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>

    <!--registration strings -->
    <string name="Register">Submit</string>
    <string name="mobile">e.g. 09071434444</string>
    <string name="email">Email</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="middleName">Middle name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_shop">Shop</string>
    <string name="nav_cart_list">Cart List</string>
    <string name="nav_product_list">Product List</string>
    <string name="nav_movies">View Cart</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Shop</item>
        <item>Product List</item>
        <item>Cart List</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_specific_cart">Cart Details</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_update_cart">Update Cart</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="registration_title">REGISTRATION</string>
    <string name="view_cart_title">CART ITEMS</string>
</resources>