<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.store.pos.fragment.ShopFragment"
    android:orientation="vertical" >

    <Button
        android:id="@+id/scan_barcode_button"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="16dp"
        android:text="@string/scan_barcode_button"
        android:textColor="@color/colorWhite"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/txtProductName"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="8dp"
        android:focusable="false"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/productName"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scan_barcode_button"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/txtProductPrice"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:focusable="false"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/productPrice"
        android:textSize="20dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/txtProductName"
        app:layout_constraintRight_toRightOf="@+id/txtProductName"
        app:layout_constraintTop_toBottomOf="@+id/txtProductName"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/txtQty"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/quantity"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="@+id/txtProductPrice"
        app:layout_constraintTop_toBottomOf="@+id/txtProductPrice"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/btnAddToCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="85dp"
        android:text="ADD TO CART"
        android:textColor="@android:color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnClear"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="62dp"
        android:text="CLEAR"
        android:textColor="@color/colorWhite"
        app:layout_constraintRight_toLeftOf="@+id/btnAddToCart"
        app:layout_constraintTop_toBottomOf="@+id/txtQty"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>

