<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pos.store.morphsys.com.morphsysstoreapp.acitivities.MainActivity"
    android:orientation="vertical" >

    <Button
        android:id="@+id/scan_barcode_button"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:background="@color/wallet_holo_blue_light"
        android:text="@string/scan_barcode_button"
        android:textColor="@color/colorWhite"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/txtProductName"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="8dp"
        android:focusable="false"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/productName"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scan_barcode_button"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/txtProductPrice"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:focusable="false"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/productPrice"
        android:textSize="20dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/txtProductName"
        app:layout_constraintRight_toRightOf="@+id/txtProductName"
        app:layout_constraintTop_toBottomOf="@+id/txtProductName"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/txtQty"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/quantity"
        android:inputType="number"
        android:background="@android:color/transparent"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/txtProductPrice"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtProductPrice" />

    <Button
        android:id="@+id/btnAddToCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ADD TO CART"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/btnViewCart"
        android:layout_marginStart="11dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="7dp"
        app:layout_constraintLeft_toLeftOf="@+id/btnViewCart" />

    <Button
        android:id="@+id/btnViewCart"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="VIEW CART"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="66dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="66dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="148dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CLEAR"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/btnViewCart"
        android:layout_marginEnd="21dp"
        app:layout_constraintRight_toRightOf="@+id/btnViewCart"
        android:layout_marginBottom="7dp" />

    <EditText
        android:id="@+id/txtNoProduct"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="sans-serif-condensed"
        android:inputType="textPersonName"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnAddToCart"
        android:layout_marginEnd="24dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="55dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="58dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtQty" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="56dp"
        android:text="EXIT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1" />

</android.support.constraint.ConstraintLayout>
